--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         </div>
       </div>
     </nav>
+      
+      <!-- tabela sendo populada pelo arquivo main.js -->
+      <div class="container-fluid">
+        <table id="listTable" class="table"> 
+        </table>
+      </div>
 
 
     <script src="js/config.js"></script>
