--- a/index.html
+++ b/index.html
@@ -16,9 +16,21 @@
       </div>
     </nav>
       
-      <!-- tabela sendo populada pelo arquivo main.js -->
+     
       <div class="container-fluid">
-        <table id="listTable" class="table"> 
+        <div class="form-inline">
+          <div class="form-group">
+            <input type="text" class="form-control" id="desc" placeholder="Description">
+          </div>
+          <div class="form-group">
+              <input type="text" class="form-control" id="amount" placeholder="Amount">
+          </div>
+          <div class="form-group">
+                <input type="text" class="form-control" id="value" placeholder="Value">
+          </div>
+          <button onclick="addData();" class="btn btn-default">ADD</button>
+        </div>
+        <table id="listTable" class="table">  <!-- tabela sendo populada pelo arquivo main.js -->
         </table>
       </div>
 
