Aula 9 - Validando formulario

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
           <span id="btnUpdate" style="display:none">
             <span id="inputIDUpdate"></span>
             <button onclick="updateData()" class="btn btn-default">Save</button>
-            <button onclick="resetForm()" class="btn btn-default">Cancel</button>
+            <button onclick="resetForm()"class="btn btn-default">Cancel</button>
           </span>
           <button id="btnAdd" onclick="addData()" class="btn btn-default">ADD</button>
         </div>
+
+        <div id="errors" style="display: none;"></div>
         <table id="listTable" class="table">  <!-- tabela sendo populada pelo arquivo main.js -->
         </table>
       </div>
