--- a/index.html
+++ b/index.html
@@ -29,11 +29,18 @@
                 <input type="text" class="form-control" id="value" placeholder="Value">
           </div>
           <span id="btnUpdate" style="display:none">
+
             <span id="inputIDUpdate"></span>
             <button onclick="updateData()" class="btn btn-default">Save</button>
             <button onclick="resetForm()"class="btn btn-default">Cancel</button>
           </span>
-          <button id="btnAdd" onclick="addData()" class="btn btn-default">ADD</button>
+          <span id="btnAdd">
+              <button onclick="addData()" class="btn btn-default">ADD</button>
+              <button onclick="resetForm()"class="btn btn-default">Reset</button>
+              <button onclick="deleteList()"class="btn btn-default">Delete List</button>
+          </span>
+
+          
         </div>
 
         <div id="errors" style="display: none;"></div>
